<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="accuracy">Accuracy</string>
  <string name="action_settings">Settings</string>
  <string name="app_name">Zero</string>
  <string name="count">Count</string>
  <string name="email_address">Email address</string>
  <string name="global_auth_token">Global Authentication Token</string>
  <string name="instance">Instance</string>
  <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
  <string name="notif_invalidPasswordOrEmail">Invalid password or e-mail</string>
  <string name="notif_loginSucceeded">Login succeeded</string>
  <string name="password">Password</string>
  <string name="pause">Pause</string>
  <string name="paused">Paused</string>
  <string name="permlab_authenticateAccounts">use Ekylibre accounts</string>
  <string name="permlab_syncData">synchronize data to Ekylibre</string>
  <string name="precision_mode">Precision mode</string>
  <string name="pref_showDetails">Show details</string>
  <string name="pref_showDetails_summary">Show coordinates and crumbs count during an intervention</string>
  <string name="procedure_nature">Procedure nature</string>
  <string name="resume">Resume</string>
  <string name="running">Running…</string>
  <string name="scan_code">Scan code</string>
  <string name="service_name">Ekylibre</string>
  <string name="settings">Settings</string>
  <string name="sign_in">Sign in</string>
  <string name="start">Start</string>
  <string name="stop">Stop</string>
  <string name="sync">Synchronize</string>
  <string name="test_demo">Test demo</string>
</resources>
