<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
							android:orientation="vertical"
							android:layout_width="fill_parent"
							android:layout_height="fill_parent">
	<Chronometer
			android:id="@+id/master_chrono"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/chrono_font_size"
			android:gravity="center"/>
	<Chronometer
			android:id="@+id/active_chrono"
			android:visibility="invisible"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/small_chrono_font_size"
			android:gravity="center"/>
	<TextView
			android:id="@+id/coordinates"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	<TextView
			android:id="@+id/barcode"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="bottom">
		<Button 
				android:id="@+id/scan_code_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:drawableLeft="@android:drawable/ic_menu_info_details"
				android:text="@string/scan_code"
				android:onClick="scanCode"/>
		<Button 
				android:id="@+id/start_intervention_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@android:drawable/ic_input_add"
				android:text="@string/start"
				android:onClick="startIntervention"/>
		<Button 
				android:id="@+id/stop_intervention_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@android:drawable/ic_input_delete"
				android:visibility="gone"
				android:text="@string/stop"
				android:onClick="stopIntervention"/>
		<Button 
				android:id="@+id/resume_intervention_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@android:drawable/ic_media_play"
				android:visibility="gone"
				android:text="@string/resume"
				android:onClick="resumeIntervention"/>
		<Button 
				android:id="@+id/pause_intervention_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@android:drawable/ic_media_pause"
				android:visibility="gone"
				android:text="@string/pause"
				android:onClick="pauseIntervention"/>
	</LinearLayout>
</LinearLayout>

