<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
			  android:layout_width="fill_parent"
        android:layout_height="wrap_content">
      <TextView 
			    android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/instance"/>
      <EditText
          android:id="@+id/accountInstance"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/instance"
          android:inputType="textUri"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
			  android:layout_width="fill_parent"
        android:layout_height="wrap_content">
      <TextView 
			    android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/email_address"/>
      <EditText 
          android:id="@+id/accountName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email_address"
          android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
			  android:layout_width="fill_parent"
        android:layout_height="wrap_content">
      <TextView 
			    android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/password"/>
      <EditText 
          android:id="@+id/accountPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:hint="@string/password"/>
    </LinearLayout>
  </LinearLayout>

 	<LinearLayout
			android:gravity="bottom"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
    <Button 
        android:id="@+id/signIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn"/>
  </LinearLayout>

</LinearLayout>

